Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18225

mysqld crash on shutdown, in Statement_map destructor

    XMLWordPrintable

Details

    Description

      As seen on buildbot http://buildbot.askmonty.org/buildbot/builders/winx64-debug/builds/11784/steps/test/logs/stdio

      The reason for the crash is that THD destructor calls Statement_map destructor, which tries to access an already freed mutex LOCK_prepared_stmt_count.

      All mutexes are freed when thread_count goes to 0, which happens when unlink_thd() is called for the last THD. Yet, THD destructor is called later, and thus can potentially access a freed mutex.

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.